tests/baselines/reference/infiniteExpansionThroughInstantiation2.errors.txt
tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionThroughInstantiation2.ts(4,14): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionThroughInstantiation2.ts(4,24): error TS2464: Illegal reference AA in constraint.


==== tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionThroughInstantiation2.ts (2 errors) ====
    // instantiating a derived type can cause an infinitely expanding type reference to be generated
    // which could be used in an assignment check for constraint satisfaction
    
    interface AA<T extends AA<T>> // now an error due to referencing type parameter in constraint
                 ~~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                           ~~~~~
!!! error TS2464: Illegal reference AA in constraint.
    {
        x: T
    }
    
    interface BB extends AA<AA<BB>>
    {
    }